# nav2-test

./: .gitignore
docker/: Dockerfile  build-img  compose.yaml  open_env
src/navigation2/nav2_bringup/: CMakeLists.txt  package.xml
src/navigation2/nav2_bringup/launch/: bringup_launch.py  eurobot_simulation_launch.py  fake_localization_launch.py  navigation_launch.py
src/navigation2/nav2_bringup/maps/: basic_map.yaml
src/navigation2/nav2_bringup/params/: move_base_params.yaml  nav2_params.yaml
src/navigation2/nav2_bringup/rviz/: nav2_default_view.rviz  rviz_sim.rviz
src/navigation2/nav2_bringup/src/: odom_sim.cpp
src/navigation2/nav2_regulated_pure_pursuit_controller/src/: regulated_pure_pursuit_controller.cpp
